update: python 70.md

--- a/python/contents/70.md
+++ b/python/contents/70.md
@@ -32,15 +32,15 @@ MongoDB数据库
 
 ### RDBMS 与 MongoDB 对应的术语区别
 
-    <table>
-        <tr><th>RDBMS</th><th>MongoDB</th></tr>
-        <tr><td>数据库</td><td>数据库</td></tr>
-        <tr><td>表格</td><td>集合</td></tr>
-        <tr><td>行</td><td>文档</td></tr>
-        <tr><td>列</td><td>字段</td></tr>
-        <tr><td>表联合</td><td>嵌入文档</td></tr>
-        <tr><td>主键</td><td>主键(提供了key为_id)</td></tr>
-    </table>
+<table>
+    <tr><th>RDBMS</th><th>MongoDB</th></tr>
+    <tr><td>数据库</td><td>数据库</td></tr>
+    <tr><td>表格</td><td>集合</td></tr>
+    <tr><td>行</td><td>文档</td></tr>
+    <tr><td>列</td><td>字段</td></tr>
+    <tr><td>表联合</td><td>嵌入文档</td></tr>
+    <tr><td>主键</td><td>主键(提供了key为_id)</td></tr>
+</table>
 
 ### Windows下安装MongoDB
 
@@ -129,13 +129,14 @@ MongoDB数据库
 
 4 ) 数据的操作
 
-- 插入语法 $`db.集合名称.insert(document)` 例：$`db.stu.insert({name:'gj',gender:1})`
+- 插入语法： $`db.集合名称.insert(document)` 
+    * 例：$`db.stu.insert({name:'gj',gender:1})`
 
 - 插入文档时，如果不指定_id参数，MongoDB的会为文档分配一个唯一的的ObjectId
     ```python
-        s1={_id:'20160101',name:'hr'}
-        s1.gender=0
-        db.stu.insert(s1)
+    s1={_id:'20160101',name:'hr'}
+    s1.gender=0
+    db.stu.insert(s1)
     ```
 
 - 简单查询 $ `db.集合名称.find()`
@@ -220,7 +221,7 @@ MongoDB数据库
     ```
 
 - limit限制
-    * 方法限制（）：用于读取指定数量的文档
+    * 方法限制：用于读取指定数量的文档
     * db.集合名称.find().limit(NUMBER)
     * 参数号表示要获取文档的条数
     * 如果没有指定参数则显示集合中的所有文档
@@ -251,8 +252,9 @@ MongoDB数据库
     * 方法distinct()对数据进行去重, $`db.集合名称.distinct('去重字段',{条件})`
     * 例: 查找年龄大于18的性别（去重） $`db.stu.distinct('gender',{age:{$gt:18}})`
 
-- 备份与恢复
-    备份
+5 ） 备份与恢复
+
+- 备份
     * 语法 $ `mongodump -h dbhost -d dbname -o dbdirectory`
     * -h：服务器地址，也可以指定端口号
     * -d：需要备份的数据库名称
@@ -260,34 +262,35 @@ MongoDB数据库
     * 例: $`sudo mkdir test1bak`
     * 例：$`sudo mongodump -h 192.168.196.128:27017 -d test1 -o ~/Desktop/test1bak`
     
-    恢复
+- 恢复
     * 语法 $`mongorestore -h dbhost -d dbname --dir dbdirectory`
     * -h：服务器地址
     * -d：需要恢复的数据库实例
     * --dir：备份数据所在位置
     * 例: $`mongorestore -h 192.168.196.128:27017 -d test2 --dir ~/Desktop/test1bak/test1`
 
-- 与python交互
-    * 安装python包 $`pip install pymongo` （注：在Mac环境下的python3环境一般是pip3）
-    * 引入包pymongo $`import pymongo`
-    * 连接，创建客户端 $`client=pymongo.MongoClient("localhost", 27017)`
-    * 获得数据库test1 $`db=client.test1`
-    * 获得集合stu $`stu = db.stu`
-    * 添加文档 $`s1={name:'gj',age:18}`, $`s1_id = stu.insert_one(s1).inserted_id` 
-    * 查找一个文档 $`s2=stu.find_one()`
-    * 查找多个文档 
-        ```js
-        for cur in stu.find():
-            print cur
-        ```
-    * 查找多个文档
-        ```js
-        cur=stu.find()
-        cur.next()
-        cur.next()
-        cur.next()
-        ```
-    * 获取文档个数 $`print stu.count()`
+6 ）与python交互
+
+- 安装python包 $`pip install pymongo` （注：在Mac环境下的python3环境一般是pip3）
+- 引入包pymongo $`import pymongo`
+- 连接，创建客户端 $`client=pymongo.MongoClient("localhost", 27017)`
+- 获得数据库test1 $`db=client.test1`
+- 获得集合stu $`stu = db.stu`
+- 添加文档 $`s1={name:'gj',age:18}`, $`s1_id = stu.insert_one(s1).inserted_id` 
+- 查找一个文档 $`s2=stu.find_one()`
+- 查找多个文档 
+    ```js
+    for cur in stu.find():
+        print cur
+    ```
+- 查找多个文档
+    ```js
+    cur=stu.find()
+    cur.next()
+    cur.next()
+    cur.next()
+    ```
+- 获取文档个数 $`print stu.count()`
 
 Redis数据库
 ---
@@ -321,29 +324,30 @@ Redis数据库
 - Liunx下的安装：（如 ubuntu）
     * 安装命令： sudo apt-get -y install redis-server
     * 进入命令行模式：
-    ```shell
-    $ redis-cli
-    127.0.0.1:6379> set 'name' 'zhangsan'
-    ok
-    127.0.0.1:6379> get 'name'
-    "zhangsan"
-    ```
+        ```shell
+        $ redis-cli
+        127.0.0.1:6379> set 'name' 'zhangsan'
+        ok
+        127.0.0.1:6379> get 'name'
+        "zhangsan"
+        ```
     * 启停Redis服务：
-    ```shell
-    sudo /etc/init.d/redis-server start
-    sudo /etc/init.d/redis-server stop
-    sudo /etc/init.d/redis-server restart
-    ```
+        ```shell
+        sudo /etc/init.d/redis-server start
+        sudo /etc/init.d/redis-server stop
+        sudo /etc/init.d/redis-server restart
+        ```
 
 - Mac下的安装
     * 安装命令：brew install redis
     * 启停服务：
-    ```shell
-    brew services start redis
-    brew services stop redis
-    brew services restart redis
-    ```
+        ```shell
+        brew services start redis
+        brew services stop redis
+        brew services restart redis
+        ```
     * 配置文件： /usr/local/etc/redis.conf
+    * 备注：即使在Mac下，不同的安装方式，配置文件的位置可能不一样，因为安装位置可能会不一样
 
 - redis-py的安装:(python操作redis)
     * $`pip3 install redis`
@@ -354,114 +358,107 @@ Redis的数据类型共计5种：string(字符串)、hash(哈希表) list(双向
 
 1 ） String（子串类型）
 
-- set命令：设置一个键和值，键存在则只覆盖，返回ok
-   > set 键  值   例如： > set name zhangsan
+- set命令：设置一个键和值，键存在则只覆盖，返回ok, $`set 键  值`
+    * 例如：$ `set name zhangsan`
 
-- get命令：获取一个键的值，返回值
-   > get 键   例如：>get name
+- get命令：获取一个键的值，返回值, $`get 键`
+    * 例如：$`get name`
 
-- setnx命令：设置一个不存在的键和值（防止覆盖），
-   > setnx 键 值  若键已存在则返回0表示失败
+- setnx命令：设置一个不存在的键和值（防止覆盖）, $`setnx 键 值`
+    * 备注：若键已存在则返回0表示失败
 
-- setex命令：设置一个指定有效期的键和值（单位秒）
-   > setex 键 [有效时间] 值  例: > setex color 10 red 
-    不写有效时间则表示永久有效，等价于set
+- setex命令：设置一个指定有效期的键和值（单位秒）, $`setex 键 [有效时间] 值`
+    * 例: $`setex color 10 red`
+    * 备注：不写有效时间则表示永久有效，等价于set
 
-- setrange命令：替换子字符串 (替换长度由子子串长度决定)
-   > setrange 键 位置 子字串  
-   > setrange name 4 aa  # 将name键对应值的第4个位置开始替换
+- setrange命令：替换子字符串 (替换长度由子子串长度决定) , $`setrange 键 位置 子字串 `
+    * $`setrange name 4 aa` 表示将name键对应值的第4个位置开始替换
 
-- mset命令：批量设置键和值,成功则返回ok
-   > mset 键1 值1 键2 值2 键3 值3 ....
+- mset命令：批量设置键和值, 成功则返回ok , $`mset 键1 值1 键2 值2 键3 值3 ....`
 
-- msetnx命令：批量设置不存在的键和值,成功则返回ok
-   > msetnx 键1 值1 键2 值2 键3 值3 ....
+- msetnx命令：批量设置不存在的键和值,成功则返回ok , $`msetnx 键1 值1 键2 值2 键3 值3 ....`
 
 - getset命令：获取原值，并设置新值
 
 - getrange命令：获取指定范围的值
-   > getrange 键 0,4  //获取指定0到4位置上的值
+    * 例如：$`getrange 键 0,4` 获取指定0到4位置上的值
 
-- mget命令： 批量获取值
-   > mget 键1 键2 键3....
+- mget命令： 批量获取值 $`mget 键1 键2 键3....`
 
-- incr命令： 指定键的值做加加操作，返回加后的结果
-   > incr 键   例如： >incr kid
+- incr命令： 指定键的值做加加操作，返回加后的结果 , $`incr 键`
+    * 例如： $`incr num`
 
-- incrby命令： 设置某个键加上指定值
-   > incrby 键 m    //其中m可以是正整数或负整数
+- incrby命令： 设置某个键加上指定值 $`incrby 键 m` //其中m可以是正整数或负整数
 
-- decr命令： 指定键的值做减减操作，返回减后的结果
-   > decr 键   例如： > decr kid
+- decr命令： 指定键的值做减减操作，返回减后的结果 , $`decr 键`
+    * 例如： $`decr num`
    
-- decrby命令： 设置某个键减上指定值
-   > decrby 键 m   // 其中m可以是正整数或负整数
+- decrby命令： 设置某个键减上指定值 , $`decrby 键 m` 其中m可以是正整数或负整数
+    * 例如： $`decrby num 5`
 
-- append命令：给指定key的字符串追加value，返回新字符串值的长度
-   > append 键 追加字串
+- append命令：给指定key的字符串追加value，返回新字符串值的长度 , $`append 键 追加字串`
 
-- strlen求长度 
-    > strlen 键名   // 返回对应的值
+- strlen求长度 , $`strlen 键名` 返回对应的值
 
 2 ）hash类型
 
-- hset命令：设置一个哈希表的键和值
-  > hset hash名 键  值
-  如：>hset user:001 name zhangsan
+- hset命令：设置一个哈希表的键和值, $`hset hash名 键  值`
+    * 例如：$`hset user001 name zhangsan`
 
-- hsetnx命令：设置一个哈希表中不存在的键和值
-  > hsetnx hash名 键  值  //成功返回1，失败返回0
-  如：> hsetnx user:001 name zhangsan
+- hsetnx命令：设置一个哈希表中不存在的键和值 $`hsetnx hash名 键  值`
+    * 例如：$`hsetnx user:001 name zhangsan` 成功返回1，失败返回0 
 
 - hmset命令： 批量设置
 
 - hget命令： 获取执行哈希名中的键对应值
 
-- hexists user:001 name //是否存在，若存在返回1
+- hexists命令：
+    * $`hexists user001 name` 是否存在，若存在返回1
 
-- hlen user:001  // 获取某哈希user001名中键的数量
+- hlen命令： 
+    * $`hlen user001`  获取某哈希user001名中键的数量
 
-- hdel user:001 name // 删除哈希user:001 中name键
+- hdel命令：
+    * $`hdel user001 name` 删除哈希user001中name键
 
-- hkeys user:002   // 返回哈希名为user:002中的所有键
+- hkeys命令：
+    * $`hkeys user002`  返回哈希名为user002中的所有键
 
-- hvals user:002   // 返回哈希名为user:002中的所有值
+- hvals命令：
+    * $`hvals user002`  返回哈希名为user002中的所有值
 
-- hgetall user:002 // 返回哈希名为user:002中的所有键和值
+- hgetall命令：
+    * $`hgetall user002` 返回哈希名为user002中的所有键和值
 
 3 ） list类型（双向链表结构）
 
 list即可以作为“栈”也可以作为"队列"。
 
 ```shell
- >lpush list1 "world"  //在list1头部压入一个字串
- >lpush list1 "hello"  // 在list1头部压入一个字串
- >lrange list1 0 -1  //获取list1中内容
-    0:表示开头  -1表示结尾。
+ > lpush list1 "world"  # 在list1头部压入一个字串
+ > lpush list1 "hello"  # 在list1头部压入一个字串
+ > lrange list1 0 -1  # 获取list1中内容 0:表示开头  -1表示结尾。
 
- >rpush list2 "world"  //在list2尾部压入一个字串
- >rpush list2 "hello"  // 在list2尾部压入一个字串
- >lrange list2 0 -1  //获取list2中内容
-    0:表示开头  -1表示结尾。
+ > rpush list2 "world"  # 在list2尾部压入一个字串
+ > rpush list2 "hello"  # 在list2尾部压入一个字串
+ > lrange list2 0 -1  # 获取list2中内容 0:表示开头  -1表示结尾。
 
- >linsert list2 before "hello" "there"
- 在key对应list的特定位置前或后添加字符串
+ > linsert list2 before "hello" "there" # 在key对应list的特定位置前或后添加字符串
 
- >lset list2 1 "four"
- 修改指定索引位置上的值
+ > lset list2 1 "four" # 修改指定索引位置上的值
 
- >lrem list2 2 "hello"  //删除前两个hello值
- >lrem list2 -2 "hello" //删除后两个hello值
- >lrem list2 0 "hello"  //删除所有hello值    
+ > lrem list2 2 "hello"  # 删除前两个hello值
+ > lrem list2 -2 "hello" # 删除后两个hello值
+ > lrem list2 0 "hello" # 删除所有hello值  
 
- >ltrim mylist8 1 -1    //删除此范围外的值
+ > ltrim mylist8 1 -1  # 删除此范围外的值
 
- >lpop list2   //从list2的头部删除元素，并返回删除元素
- >rpop list2   //从list2的尾部删除元素，并返回删除元素
- >rpoplpush list1 list2 //将list1的尾部一个元素移出到list2头部。并返回
+ > lpop list2  # 从list2的头部删除元素，并返回删除元素
+ > rpop list2  # 从list2的尾部删除元素，并返回删除元素
+ > rpoplpush list1 list2 # 将list1的尾部一个元素移出到list2头部。并返回
 
- >lindex list2 1 //返回list2中索引位置上的元素
- >llen list2 //返回list2上长度
+ > lindex list2 1 # 返回list2中索引位置上的元素
+ > llen list2 # 返回list2上长度
 
 ```
 
@@ -472,26 +469,23 @@ list即可以作为“栈”也可以作为"队列"。
 - 集合中最大的成员数为 232 - 1 (4294967295, 每个集合可存储40多亿个成员)。
 
 ```shell
- >sadd myset "hello" //向myset中添加一个元素
-  成功返回1，失败(重复)返回0
+> sadd myset "hello" # 向myset中添加一个元素， 成功返回1，失败(重复)返回0
 
- >smembers myset //获取myset中的所有元素
+> smembers myset # 获取myset中的所有元素
 
- >srem myset "one" //从myset中删除一个one
-  成功返回1，失败(不存在)返回0
+> srem myset "one" # 从myset中删除一个one，成功返回1，失败(不存在)返回0
 
- >spop myset //随机返回并删除myset中的一个元素
+> spop myset # 随机返回并删除myset中的一个元素
 
- >sdiff myset1 myset2 //返回两个集合的差集
- 以myset1为标准，获取myset2中不存在的。
+> sdiff myset1 myset2 # 返回两个集合的差集，以myset1为标准，获取myset2中不存在的。
 
- > sinter myset2 myset3 交集
+> sinter myset2 myset3 # 交集
 
- > sunion myset2 myset3 并集
+> sunion myset2 myset3 # 并集
 
- > scard myset2 返回元素个数
+> scard myset2 # 返回元素个数
 
- > sismember myset2 two 判断myset2中是否包含two
+> sismember myset2 two # 判断myset2中是否包含two
 ```
 
 5 ) 有序集合(sorted set)
@@ -531,10 +525,10 @@ redis 127.0.0.1:6379>
 
 ```shell
  # 键值相关命令
- >keys *  //返回键（key）
- >keys list*   //返回名以list开头的所有键（key）
- >exists list1  //判断键名为list1的是否存在 存在返回1， 不存在返回0
- >del list1 //删除一个键（名为list1）
+ > keys *  //返回键（key）
+ > keys list*   //返回名以list开头的所有键（key）
+ > exists list1  //判断键名为list1的是否存在 存在返回1， 不存在返回0
+ > del list1 //删除一个键（名为list1）
  >expire list1 10 //设置键名为list1的过期时间为10秒后
  >ttl list1 //查看键名为list1的过期时间，若为-1表示以过期
  >move age 1 //将键名age的转移到1数据库中。
