update: python 70.md

--- a/python/contents/70.md
+++ b/python/contents/70.md
@@ -260,14 +260,14 @@ MongoDB数据库
     * -d：需要备份的数据库名称
     * -o：备份的数据存放位置，此目录中存放着备份出来的数据
     * 例: $`sudo mkdir test1bak`
-    * 例：$`sudo mongodump -h 192.168.196.128:27017 -d test1 -o ~/Desktop/test1bak`
+    * 例：$`sudo mongodump -h 127.0.0.1:27017 -d test1 -o ~/Desktop/test1bak`
     
 - 恢复
     * 语法 $`mongorestore -h dbhost -d dbname --dir dbdirectory`
     * -h：服务器地址
     * -d：需要恢复的数据库实例
     * --dir：备份数据所在位置
-    * 例: $`mongorestore -h 192.168.196.128:27017 -d test2 --dir ~/Desktop/test1bak/test1`
+    * 例: $`mongorestore -h 127.0.0.1:27017 -d test2 --dir ~/Desktop/test1bak/test1`
 
 6 ）与python交互
 
@@ -434,142 +434,142 @@ Redis的数据类型共计5种：string(字符串)、hash(哈希表) list(双向
 
 list即可以作为“栈”也可以作为"队列"。
 
-```shell
- > lpush list1 "world"  # 在list1头部压入一个字串
- > lpush list1 "hello"  # 在list1头部压入一个字串
- > lrange list1 0 -1  # 获取list1中内容 0:表示开头  -1表示结尾。
+    ```shell
+    > lpush list1 "world"  # 在list1头部压入一个字串
+    > lpush list1 "hello"  # 在list1头部压入一个字串
+    > lrange list1 0 -1  # 获取list1中内容 0:表示开头  -1表示结尾。
 
- > rpush list2 "world"  # 在list2尾部压入一个字串
- > rpush list2 "hello"  # 在list2尾部压入一个字串
- > lrange list2 0 -1  # 获取list2中内容 0:表示开头  -1表示结尾。
+    > rpush list2 "world"  # 在list2尾部压入一个字串
+    > rpush list2 "hello"  # 在list2尾部压入一个字串
+    > lrange list2 0 -1  # 获取list2中内容 0:表示开头  -1表示结尾。
 
- > linsert list2 before "hello" "there" # 在key对应list的特定位置前或后添加字符串
+    > linsert list2 before "hello" "there" # 在key对应list的特定位置前或后添加字符串
 
- > lset list2 1 "four" # 修改指定索引位置上的值
+    > lset list2 1 "four" # 修改指定索引位置上的值
 
- > lrem list2 2 "hello"  # 删除前两个hello值
- > lrem list2 -2 "hello" # 删除后两个hello值
- > lrem list2 0 "hello" # 删除所有hello值  
+    > lrem list2 2 "hello"  # 删除前两个hello值
+    > lrem list2 -2 "hello" # 删除后两个hello值
+    > lrem list2 0 "hello" # 删除所有hello值  
 
- > ltrim mylist8 1 -1  # 删除此范围外的值
+    > ltrim mylist8 1 -1  # 删除此范围外的值
 
- > lpop list2  # 从list2的头部删除元素，并返回删除元素
- > rpop list2  # 从list2的尾部删除元素，并返回删除元素
- > rpoplpush list1 list2 # 将list1的尾部一个元素移出到list2头部。并返回
+    > lpop list2  # 从list2的头部删除元素，并返回删除元素
+    > rpop list2  # 从list2的尾部删除元素，并返回删除元素
+    > rpoplpush list1 list2 # 将list1的尾部一个元素移出到list2头部。并返回
 
- > lindex list2 1 # 返回list2中索引位置上的元素
- > llen list2 # 返回list2上长度
+    > lindex list2 1 # 返回list2中索引位置上的元素
+    > llen list2 # 返回list2上长度
 
-```
+    ```
 
 4 ) sets类型和操作
 
 - Redis 的 Set 是 String 类型的无序集合。集合成员是唯一的，这就意味着集合中不能出现重复的数据。
 
-- 集合中最大的成员数为 232 - 1 (4294967295, 每个集合可存储40多亿个成员)。
+- 集合中最大的成员数为 2^32 - 1 (4294967295, 每个集合可存储40多亿个成员)。
+    ```shell
+    > sadd myset "hello" # 向myset中添加一个元素， 成功返回1，失败(重复)返回0
 
-```shell
-> sadd myset "hello" # 向myset中添加一个元素， 成功返回1，失败(重复)返回0
+    > smembers myset # 获取myset中的所有元素
 
-> smembers myset # 获取myset中的所有元素
+    > srem myset "one" # 从myset中删除一个one，成功返回1，失败(不存在)返回0
 
-> srem myset "one" # 从myset中删除一个one，成功返回1，失败(不存在)返回0
+    > spop myset # 随机返回并删除myset中的一个元素
 
-> spop myset # 随机返回并删除myset中的一个元素
+    > sdiff myset1 myset2 # 返回两个集合的差集，以myset1为标准，获取myset2中不存在的。
 
-> sdiff myset1 myset2 # 返回两个集合的差集，以myset1为标准，获取myset2中不存在的。
+    > sinter myset2 myset3 # 交集
 
-> sinter myset2 myset3 # 交集
+    > sunion myset2 myset3 # 并集
 
-> sunion myset2 myset3 # 并集
+    > scard myset2 # 返回元素个数
 
-> scard myset2 # 返回元素个数
-
-> sismember myset2 two # 判断myset2中是否包含two
-```
+    > sismember myset2 two # 判断myset2中是否包含two
+    ```
 
 5 ) 有序集合(sorted set)
 
 - Redis 有序集合和集合一样也是string类型元素的集合,且不允许重复的成员。
 
 - 不同的是每个元素都会关联一个double类型的分数。redis正是通过分数来为集合中的成员进行从小到大的排序。
+    ```shell
+    向名称为 key 的 zset 中添加元素 member,score 用于排序。如果该元素已经存在,则根据 score 更新该元素的顺序
+    redis 127.0.0.1:6379> zadd myzset 1 "one" # 添加 
+    (integer) 1
 
-```shell
-向名称为 key 的 zset 中添加元素 member,score 用于排序。如果该元素已经存在,则根据 score 更新该元素的顺序
-redis 127.0.0.1:6379> zadd myzset 1 "one" 添加 
-(integer) 1
+    redis 127.0.0.1:6379> zadd myzset 2 "two" 
+    (integer) 1
 
-redis 127.0.0.1:6379> zadd myzset 2 "two" 
-(integer) 1
+    redis 127.0.0.1:6379> zadd myzset 3 "two"
+    (integer) 0
 
-redis 127.0.0.1:6379> zadd myzset 3 "two"
-(integer) 0
+    redis 127.0.0.1:6379> zrange myzset 0 -1 withscores  # 查看
+    1) "one"  
+    2) "1"
+    3) "two"
+    4) "3"
 
-redis 127.0.0.1:6379> zrange myzset 0 -1 withscores  查看
-1) "one"  
-2) "1"
-3) "two"
-4) "3"
+    redis 127.0.0.1:6379> zrem myzset two  # 删除
+    (integer) 1
+    redis 127.0.0.1:6379> zrange myzset 0 -1 withscores  # 查看
+    1) "one"
+    2) "1"
 
-redis 127.0.0.1:6379> zrem myzset two  删除
-(integer) 1
-redis 127.0.0.1:6379> zrange myzset 0 -1 withscores  查看
-1) "one"
-2) "1"
-
-redis 127.0.0.1:6379>
-
-```
+    ```
 
 ### Redis常用命令
 
 ```shell
  # 键值相关命令
- > keys *  //返回键（key）
- > keys list*   //返回名以list开头的所有键（key）
- > exists list1  //判断键名为list1的是否存在 存在返回1， 不存在返回0
- > del list1 //删除一个键（名为list1）
- >expire list1 10 //设置键名为list1的过期时间为10秒后
- >ttl list1 //查看键名为list1的过期时间，若为-1表示以过期
- >move age 1 //将键名age的转移到1数据库中。
- >select 1 //表示进入到1数据库中，默认在0数据库 
- >persist age //移除age的过期时间（设置为过期）
+ > keys *  # 返回键（key）
+ > keys list*   # 返回名以list开头的所有键（key）
+ > exists list1  # 判断键名为list1的是否存在 存在返回1， 不存在返回0
+ > del list1  # 删除一个键（名为list1）
+ > expire list1 10 # 设置键名为list1的过期时间为10秒后
+ > ttl list1 # 查看键名为list1的过期时间，若为-1表示以过期
+ > move age 1 # 将键名age的转移到1数据库中。
+ > select 1 # 表示进入到1数据库中，默认在0数据库 
+ > persist age # 移除age的过期时间（设置为过期）
 ```
 
 ### Redis高级实用特性
 
+
+1 ） 安全性：为Redis添加密码
+
+1.1 进入配置文件并设置密码
+- $`/usr/local/redis/etc/redis.conf` 注意：此处配置文件为你电脑上的具体路径，可能不一样，只作参考
+- 设置：requirepass redis的密码
+
+1.2 重启服务
+- $`./redis-cli shutdown` 执行关闭
+- $`./redis-server /usr/local/redis/etc/redis.conf` 启动 
+
+1.3 登录
+- $`./redis-cli` 客户端命令链接服务器
+    ```shell
+    > auth 密码值 # 授权后方可使用
+    ```
+
+- $`./redis-cli -a 密码` 连接时指定密码来进行授权
+
+
+2 ) 主从复制
+
+- 先将linux虚拟机关闭，之后克隆一个。
+- 启动两个虚拟机：master（主）和slave（从）
+- 在slave（从）中配置一下ip地址
+    * ifconfig eth0 192.168.128.229
+    * ping 一下看看通不通
+- 配置从机
+    * 进入：配置文件
+    * slaveof  192.168.128.228 6379   # 配置连接主机的Redis的ip和端口
+    * masterauth 密码  # 配置连接密码
+    * 最后启动slave（从）机的Redis服务
+    * 其他：可以通过info命令中的role属性查看自己角色是master、slave
+
+
 ```shell
- 1. 安全性：为Redis添加密码
--------------------------------
-   1.进入配置文件：
-     vi /usr/local/redis/etc/redis.conf
-     设置：requirepass redis的密码
-   2. 重启服务：
-    # ./redis-cli shutdown 执行关闭
-    # ./redis-server /usr/local/redis/etc/redis.conf  启动 
-   3. 登录（两种）
-    # ./redis-cli 客户端命令链接服务器
-    >auth 密码值  //授权后方可使用
-
-    # ./redis-cli -a  密码 //连接时指定密码来进行授权
-
-
- 2. 主从复制
-------------------------------------------
-    操作步骤：
-     1.先将linux虚拟机关闭，之后克隆一个。
-     2.启动两个虚拟机：master（主）和slave（从）
-     3. 在slave（从）中配置一下ip地址
-        # ifconfig eth0 192.168.128.229
-        # ping 一下看看通不通。
-     4. 配置从机
-        进入：配置文件
-        slaveof  192.168.128.228 6379   //配置连接主机的Redis的ip和端口
-        masterauth 密码  //配置连接密码
-
-        最后启动slave（从）机的Redis服务。
-
-     其他：可以通过info命令中的role属性查看自己角色是master、slave
 
 
  3. 事务处理
