update: python 70.md

--- a/python/contents/70.md
+++ b/python/contents/70.md
@@ -434,88 +434,89 @@ Redis的数据类型共计5种：string(字符串)、hash(哈希表) list(双向
 
 list即可以作为“栈”也可以作为"队列"。
 
-    ```shell
-    > lpush list1 "world"  # 在list1头部压入一个字串
-    > lpush list1 "hello"  # 在list1头部压入一个字串
-    > lrange list1 0 -1  # 获取list1中内容 0:表示开头  -1表示结尾。
+```shell
+> lpush list1 "world"  # 在list1头部压入一个字串
+> lpush list1 "hello"  # 在list1头部压入一个字串
+> lrange list1 0 -1  # 获取list1中内容 0:表示开头  -1表示结尾。
 
-    > rpush list2 "world"  # 在list2尾部压入一个字串
-    > rpush list2 "hello"  # 在list2尾部压入一个字串
-    > lrange list2 0 -1  # 获取list2中内容 0:表示开头  -1表示结尾。
+> rpush list2 "world"  # 在list2尾部压入一个字串
+> rpush list2 "hello"  # 在list2尾部压入一个字串
+> lrange list2 0 -1  # 获取list2中内容 0:表示开头  -1表示结尾。
 
-    > linsert list2 before "hello" "there" # 在key对应list的特定位置前或后添加字符串
+> linsert list2 before "hello" "there" # 在key对应list的特定位置前或后添加字符串
 
-    > lset list2 1 "four" # 修改指定索引位置上的值
+> lset list2 1 "four" # 修改指定索引位置上的值
 
-    > lrem list2 2 "hello"  # 删除前两个hello值
-    > lrem list2 -2 "hello" # 删除后两个hello值
-    > lrem list2 0 "hello" # 删除所有hello值  
+> lrem list2 2 "hello"  # 删除前两个hello值
+> lrem list2 -2 "hello" # 删除后两个hello值
+> lrem list2 0 "hello" # 删除所有hello值  
 
-    > ltrim mylist8 1 -1  # 删除此范围外的值
+> ltrim mylist8 1 -1  # 删除此范围外的值
 
-    > lpop list2  # 从list2的头部删除元素，并返回删除元素
-    > rpop list2  # 从list2的尾部删除元素，并返回删除元素
-    > rpoplpush list1 list2 # 将list1的尾部一个元素移出到list2头部。并返回
+> lpop list2  # 从list2的头部删除元素，并返回删除元素
+> rpop list2  # 从list2的尾部删除元素，并返回删除元素
+> rpoplpush list1 list2 # 将list1的尾部一个元素移出到list2头部。并返回
 
-    > lindex list2 1 # 返回list2中索引位置上的元素
-    > llen list2 # 返回list2上长度
+> lindex list2 1 # 返回list2中索引位置上的元素
+> llen list2 # 返回list2上长度
 
-    ```
+```
 
 4 ) sets类型和操作
 
 - Redis 的 Set 是 String 类型的无序集合。集合成员是唯一的，这就意味着集合中不能出现重复的数据。
 
 - 集合中最大的成员数为 2^32 - 1 (4294967295, 每个集合可存储40多亿个成员)。
-    ```shell
-    > sadd myset "hello" # 向myset中添加一个元素， 成功返回1，失败(重复)返回0
+```shell
+> sadd myset "hello" # 向myset中添加一个元素， 成功返回1，失败(重复)返回0
 
-    > smembers myset # 获取myset中的所有元素
+> smembers myset # 获取myset中的所有元素
 
-    > srem myset "one" # 从myset中删除一个one，成功返回1，失败(不存在)返回0
+> srem myset "one" # 从myset中删除一个one，成功返回1，失败(不存在)返回0
 
-    > spop myset # 随机返回并删除myset中的一个元素
+> spop myset # 随机返回并删除myset中的一个元素
 
-    > sdiff myset1 myset2 # 返回两个集合的差集，以myset1为标准，获取myset2中不存在的。
+> sdiff myset1 myset2 # 返回两个集合的差集，以myset1为标准，获取myset2中不存在的。
 
-    > sinter myset2 myset3 # 交集
+> sinter myset2 myset3 # 交集
 
-    > sunion myset2 myset3 # 并集
+> sunion myset2 myset3 # 并集
 
-    > scard myset2 # 返回元素个数
+> scard myset2 # 返回元素个数
 
-    > sismember myset2 two # 判断myset2中是否包含two
-    ```
+> sismember myset2 two # 判断myset2中是否包含two
+```
 
 5 ) 有序集合(sorted set)
 
 - Redis 有序集合和集合一样也是string类型元素的集合,且不允许重复的成员。
 
 - 不同的是每个元素都会关联一个double类型的分数。redis正是通过分数来为集合中的成员进行从小到大的排序。
-    ```shell
-    向名称为 key 的 zset 中添加元素 member,score 用于排序。如果该元素已经存在,则根据 score 更新该元素的顺序
-    redis 127.0.0.1:6379> zadd myzset 1 "one" # 添加 
-    (integer) 1
 
-    redis 127.0.0.1:6379> zadd myzset 2 "two" 
-    (integer) 1
+```shell
+向名称为 key 的 zset 中添加元素 member,score 用于排序。如果该元素已经存在,则根据 score 更新该元素的顺序
+redis 127.0.0.1:6379> zadd myzset 1 "one" # 添加 
+(integer) 1
 
-    redis 127.0.0.1:6379> zadd myzset 3 "two"
-    (integer) 0
+redis 127.0.0.1:6379> zadd myzset 2 "two" 
+(integer) 1
 
-    redis 127.0.0.1:6379> zrange myzset 0 -1 withscores  # 查看
-    1) "one"  
-    2) "1"
-    3) "two"
-    4) "3"
+redis 127.0.0.1:6379> zadd myzset 3 "two"
+(integer) 0
 
-    redis 127.0.0.1:6379> zrem myzset two  # 删除
-    (integer) 1
-    redis 127.0.0.1:6379> zrange myzset 0 -1 withscores  # 查看
-    1) "one"
-    2) "1"
+redis 127.0.0.1:6379> zrange myzset 0 -1 withscores  # 查看
+1) "one"  
+2) "1"
+3) "two"
+4) "3"
 
-    ```
+redis 127.0.0.1:6379> zrem myzset two  # 删除
+(integer) 1
+redis 127.0.0.1:6379> zrange myzset 0 -1 withscores  # 查看
+1) "one"
+2) "1"
+
+```
 
 ### Redis常用命令
 
@@ -534,7 +535,6 @@ list即可以作为“栈”也可以作为"队列"。
 
 ### Redis高级实用特性
 
-
 1 ） 安全性：为Redis添加密码
 
 1.1 进入配置文件并设置密码
@@ -545,14 +545,13 @@ list即可以作为“栈”也可以作为"队列"。
 - $`./redis-cli shutdown` 执行关闭
 - $`./redis-server /usr/local/redis/etc/redis.conf` 启动 
 
-1.3 登录
-- $`./redis-cli` 客户端命令链接服务器
+1.3 登录（两种）
+- 方式1：$`./redis-cli` 客户端命令链接服务器
     ```shell
     > auth 密码值 # 授权后方可使用
     ```
 
-- $`./redis-cli -a 密码` 连接时指定密码来进行授权
-
+- 方式2：$`./redis-cli -a 密码` 连接时指定密码来进行授权
 
 2 ) 主从复制
 
@@ -568,62 +567,73 @@ list即可以作为“栈”也可以作为"队列"。
     * 最后启动slave（从）机的Redis服务
     * 其他：可以通过info命令中的role属性查看自己角色是master、slave
 
+3 ） 事务处理
 
 ```shell
+> multi   # 开启一个事务
+> set age 10 # 暂存指令队列
+> set age 20
+> exec   # 开始执行（提交事务）
+# 或
+> discard # 清空指令队列（事务回滚）
 
+```
 
- 3. 事务处理
---------------------------------------------
- >multi   //开启一个事务
- >set age 10 //暂存指令队列
- >set age 20
- >exec    //开始执行（提交事务）
- 或>discard //清空指令队列（事务回滚）
+4 ) 乐观锁
 
- 4. 乐观锁
------------------------------------
-  在事务前对被操作的属性做一个：
+```shell
+ # 在事务前对被操作的属性做一个
  > watch age
- >multi   //开启一个事务(在此期间有其他修改，则此处会失败)
- >set age 10 //暂存指令队列
- >set age 20
- >exec    //开始执行（提交事务）
- 或>discard //清空指令队列（事务回滚）
+ > multi  # 开启一个事务(在此期间有其他修改，则此处会失败)
+ > set age 10 # 暂存指令队列
+ > set age 20
+ > exec  # 开始执行（提交事务）
+ # 或
+ > discard # 清空指令队列（事务回滚）
+```
 
- 5. 持久化机制(通过修改配置文件做设置)
------------------------------------
-   1. snapshotting(快照)默认方式
-      配置    save
-        save 900 1 #900秒内如果超过1个key被修改，则发起快照保存
-        save 300 10 #300秒内容如超过10个key被修改，则发起快照保存
-        save 60 10000
-   2. Append-only file（aof方式）
-      配置 appendonly on 改为yes
-      会在bin目录下产生一个.aof的文件
+5 ） 持久化机制(通过修改配置文件做设置)
 
-   关于aof的配置  
-    appendonly yes //启用aof 持久化方式 
-    # appendfsync always //收到写命令就立即写入磁盘，最慢，但是保证完全的持久化 
-    appendfsync everysec //每秒钟写入磁盘一次，在性能和持久化方面做了很好的折中 
-    # appendfsync no //完全依赖os，性能最好,持久化没保证  
+5.1 snapshotting(快照)默认方式
 
-  6.  发布及订阅消息
-----------------------
-    需要开启多个会话端口
-    会话1：>subscribe tv1      //监听tv1频道
-    会话2：>subscribe tv1 tv2  //监听tv1和tv2频道
-    会话3: >publish tv1 消息   //向tv1频道发送一个消息
+```conf
+# 配置    save
+save 900 1 #900秒内如果超过1个key被修改，则发起快照保存
+save 300 10 #300秒内容如超过10个key被修改，则发起快照保存
+save 60 10000
+```
 
- 7. 使用虚拟内存
--------------------------------
-  在redis配置文件中设置
-    vm-enabled yes          #开启vm功能
-    vm-swap-file  /tmp/redis.swap   #交换出来的value保存的文件路径
-    vm-max-memory 1000000   #redis使用的最大内存上限
-    vm-page-size 32         #每个页面的大小32字节
-    vm-pages 134217728      #最多使用多少页面
-    vm-max-threads 4        #用于执行value对象换入患处的工作线程数量
+5.2. Append-only file（aof方式）
 
+配置 appendonly on 改为yes
+会在bin目录下产生一个.aof的文件
+
+5.3 关于aof的配置
+
+```conf
+appendonly yes # 启用aof 持久化方式 
+# appendfsync always # 收到写命令就立即写入磁盘，最慢，但是保证完全的持久化 
+appendfsync everysec # 每秒钟写入磁盘一次，在性能和持久化方面做了很好的折中 
+# appendfsync no # 完全依赖os，性能最好, 持久化没保证  
+```
+
+6 ) 发布及订阅消息
+
+需要开启多个会话端口
+会话1：> subscribe tv1      //监听tv1频道
+会话2：> subscribe tv1 tv2  //监听tv1和tv2频道
+会话3: > publish tv1 消息   //向tv1频道发送一个消息
+
+ 7 )  使用虚拟内存
+
+在redis配置文件中设置
+```conf
+vm-enabled yes          #开启vm功能
+vm-swap-file  /tmp/redis.swap   #交换出来的value保存的文件路径
+vm-max-memory 1000000   #redis使用的最大内存上限
+vm-page-size 32         #每个页面的大小32字节
+vm-pages 134217728      #最多使用多少页面
+vm-max-threads 4        #用于执行value对象换入患处的工作线程数量
 ```
 
 ### Python使用Redis
