update: python 70.md

--- a/python/contents/70.md
+++ b/python/contents/70.md
@@ -398,7 +398,7 @@ Redis的数据类型共计5种：string(字符串)、hash(哈希表) list(双向
 
 - append命令：给指定key的字符串追加value，返回新字符串值的长度 , $`append 键 追加字串`
 
-- strlen求长度 , $`strlen 键名` 返回对应的值
+- strlen命令：strlen求长度 , $`strlen 键名` 返回对应的值
 
 2 ）hash类型
 
@@ -620,16 +620,16 @@ appendfsync everysec # 每秒钟写入磁盘一次，在性能和持久化方面
 6 ) 发布及订阅消息
 
 需要开启多个会话端口
-会话1：> subscribe tv1      //监听tv1频道
-会话2：> subscribe tv1 tv2  //监听tv1和tv2频道
-会话3: > publish tv1 消息   //向tv1频道发送一个消息
+会话1：> subscribe tv1      # 监听tv1频道 <br>
+会话2：> subscribe tv1 tv2  # 监听tv1和tv2频道 <br>
+会话3: > publish tv1 消息   # 向tv1频道发送一个消息
 
  7 )  使用虚拟内存
 
 在redis配置文件中设置
 ```conf
 vm-enabled yes          #开启vm功能
-vm-swap-file  /tmp/redis.swap   #交换出来的value保存的文件路径
+vm-swap-file /tmp/redis.swap   #交换出来的value保存的文件路径
 vm-max-memory 1000000   #redis使用的最大内存上限
 vm-page-size 32         #每个页面的大小32字节
 vm-pages 134217728      #最多使用多少页面
