add: python 72.md

--- a/python/contents/72.md
+++ b/python/contents/72.md
@@ -62,7 +62,9 @@ Scrapy分布式爬虫
 - Scrapy-redis重写了Scrapy一些比较关键的代码，将Scrapy变成一个可以在多个主机上同时运行的分布式爬虫。
 - Scrapy-Redis的官方网址：https://github.com/rmax/scrapy-redis
 - 架构图
-    <img width="700" src="./screenshot/scrapy-eg7.jpg" />
+    <div>
+        <img width="700" src="./screenshot/scrapy-eg7.jpg" />
+    </div>
 
 ### 准备工作
 
@@ -161,7 +163,7 @@ class ExampleLoader(ItemLoader):
 
 3 ) **spider的改造**
 
-- star_turls变成了redis_key从redis中获得request，继承的scrapy.spider变成RedisSpider。
+- star_urls变成了redis_key从redis中获得request，继承的scrapy.spider变成RedisSpider。
 
 ```python
 from scrapy_redis.spiders import RedisSpider
@@ -241,3 +243,267 @@ DEFAULT_REQUEST_HEADERS = {
 }
 ```
 
+Scrapy分布式应用案例
+---
+
+### 实现目标
+
+- 实现主从分布式爬虫，爬取5i5j的楼盘信息
+- URL地址：https://fang.5i5j.com/bj/loupan/
+- 准备工作：开启redis数据库服务
+
+### 应用案例代码仓库和架构
+
+1 ）仓库
+[点此查看项目地址](https://github.com/johnnynode/python-spider/tree/master/basic/contents/code/scrapy-radis)
+
+注意：此项目没有做反爬处理，可以使用第三方ip代理，具体请看前面博文，没有从radis中存储到mongodb中，具体实现方式参考最后的代码
+
+2 ）架构
+
+<img width=700 src="./screenshot/scrapy-eg8.jpg">
+
+3 ) 编写master(主)项目代码
+
+- 编辑爬虫文件：fang.py
+
+```python
+# -*- coding: utf-8 -*-
+# python3.7.1 + scrapy1.5.1
+from scrapy.spiders import CrawlSpider, Rule  
+from scrapy.linkextractors import LinkExtractor  
+from fang_5i5j.items import MasterItem  
+
+class FangSpider(CrawlSpider):  
+    name = 'master'  
+    allowed_domains = ['fang.5i5j.com']
+    start_urls = ['https://fang.5i5j.com/bj/loupan/']
+    item = MasterItem()
+    
+    # Rule是在定义抽取链接的规则
+    rules = (
+        Rule(LinkExtractor(allow=('https://fang.5i5j.com/bj/loupan/n[0-9]+/',)), callback='parse_item',  
+             follow=True),
+    )
+    
+    def parse_item(self, response):
+        item = self.item
+        item['url'] = response.url  
+        return item
+```
+
+- 编辑items.py 储存url地址
+
+```python
+# -*- coding: utf-8 -*-
+
+# Define here the models for your scraped items
+#
+# See documentation in:
+# https://docs.scrapy.org/en/latest/topics/items.html
+
+import scrapy
+
+class MasterItem(scrapy.Item):
+    # define the fields for your item here like:
+    url = scrapy.Field()  
+    # pass
+```
+
+- 编辑pipelines.py负责存储爬取的url地址到redis中
+
+```python
+import redis,re
+
+class Fang5I5JPipeline(object):
+    def process_item(self, item, spider):
+        return item
+
+class MasterPipeline(object):  
+    def __init__(self,host,port):
+        #连接redis数据库
+        self.r = redis.Redis(host=host, port=port, decode_responses=True)
+        #self.redis_url = 'redis://password:@localhost:6379/'  
+        #self.r = redis.Redis.from_url(self.redis_url,decode_responses=True)  
+
+    @classmethod
+    def from_crawler(cls, crawler):
+        '''注入实例化对象（传入参数）'''
+        return cls(
+            host = crawler.settings.get("REDIS_HOST"),
+            port = crawler.settings.get("REDIS_PORT"),
+        )
+
+    def process_item(self, item, spider):  
+        #使用正则判断url地址是否有效，并写入redis。
+        if re.search('/bj/loupan/', item['url']):
+            self.r.lpush('fangspider:start_urls', item['url'])
+        else:
+            self.r.lpush('fangspider:no_urls', item['url'])
+
+```
+
+- 编辑配置文件：settings.py配置文件
+
+```python
+ITEM_PIPELINES = {
+    'fang_5i5j.pipelines.MasterPipeline': 300,
+}
+
+# 指定使用scrapy-redis的去重
+DUPEFILTER_CLASS = 'scrapy_redis.dupefilter.RFPDupeFilter'
+
+# 指定使用scrapy-redis的调度器
+SCHEDULER = "scrapy_redis.scheduler.Scheduler"
+
+# 在redis中保持scrapy-redis用到的各个队列，从而允许暂停和暂停后恢复，也就是不清理redis queues
+SCHEDULER_PERSIST = True
+
+# 指定排序爬取地址时使用的队列，
+# 默认的 按优先级排序(Scrapy默认)，由sorted set实现的一种非FIFO、LIFO方式。
+SCHEDULER_QUEUE_CLASS = 'scrapy_redis.queue.SpiderPriorityQueue'
+
+# REDIS_URL = 'redis:password//127.0.0.1:6379' # 一般情况可以省去
+REDIS_HOST = '127.0.0.1' # 也可以根据情况改成 localhost
+REDIS_PORT = 6379
+```
+
+- 测试：爬取url $`scrapy runspider fang.py`
+
+4 ) 编写slave(从)项目代码
+
+- 编辑爬虫文件：fang.py
+
+```python
+# -*- coding: utf-8 -*-
+import scrapy
+from fang_5i5j.items import FangItem
+from scrapy_redis.spiders import RedisSpider
+
+class FangSpider(RedisSpider):
+    name = 'fang'
+    #allowed_domains = ['fang.5i5j.com']
+    #start_urls = ['https://fang.5i5j.com/bj/loupan/']
+    redis_key = 'fangspider:start_urls'
+
+    def __init__(self, *args, **kwargs):
+        # Dynamically define the allowed domains list.
+        domain = kwargs.pop('domain', '')
+        self.allowed_domains = filter(None, domain.split(','))
+        super(FangSpider, self).__init__(*args, **kwargs)
+
+    def parse(self, response):
+        #print(response.status)
+        hlist = response.css("li.houst_ctn")
+        for vo in hlist:
+            item = FangItem()
+            item['title'] =  vo.css("span.house_name::text").extract_first()
+            # print(item)
+            yield item
+        #pass
+
+```
+
+- 编辑 items.py 
+
+```python
+import scrapy
+
+class FangItem(scrapy.Item):
+    # 此处做一个字段处理，作为演示
+    title = scrapy.Field()
+
+```
+
+- 查看pipelines.py (按默认来即可，不用操作)
+
+```python
+class Fang5I5JPipeline(object):
+    def process_item(self, item, spider):
+        return item
+```
+
+- 编辑配置文件：settings.py配置文件
+
+```python
+ITEM_PIPELINES = {
+    # 'fang_5i5j.pipelines.Fang5I5JPipeline': 300,
+    'scrapy_redis.pipelines.RedisPipeline': 400,
+}
+
+
+# 指定使用scrapy-redis的去重
+DUPEFILTER_CLASS = 'scrapy_redis.dupefilter.RFPDupeFilter'
+
+# 指定使用scrapy-redis的调度器
+SCHEDULER = "scrapy_redis.scheduler.Scheduler"
+
+# 在redis中保持scrapy-redis用到的各个队列，从而允许暂停和暂停后恢复，也就是不清理redis queues
+SCHEDULER_PERSIST = True
+
+# 指定排序爬取地址时使用的队列，
+# 默认的 按优先级排序(Scrapy默认)，由sorted set实现的一种非FIFO、LIFO方式。
+SCHEDULER_QUEUE_CLASS = 'scrapy_redis.queue.SpiderPriorityQueue'
+
+# REDIS_URL = 'redis://localhost:6379' # 一般情况可以省去
+REDIS_HOST = '127.0.0.1' # 也可以根据情况改成 localhost
+REDIS_PORT = 6379
+```
+
+- 测试：爬取具体房屋信息 $`scrapy runspider fang.py`
+
+5 ) 测试radis
+
+- 在slave项目中另启一个终端，并连接redis数据库
+
+```shell
+$ redis_cli -p 6379
+6379 >lpush fangspider:start_urls https://fang.5i5j.com/bj/loupan/
+```
+
+- 查看终端输出及rdm中的数据信息
+
+6 ） 将爬取到的数据存入mongodb中 
+
+- 网站的数据爬回来了，但是放在Redis里没有处理。之前我们配置文件里面没有定制自己的ITEM_PIPELINES，而是使用了RedisPipeline，所以现在这些数据都被保存在redis中，所以我们需要另外做处理。
+
+- 写一个process_5i5j_profile.py文件，然后保持后台运行就可以不停地将爬回来的数据入库了。
+
+```python
+import json
+import redis
+import pymongo
+
+def main():
+    # 指定Redis数据库信息
+    rediscli = redis.StrictRedis(host='127.0.0.1', port=6379, db=0)
+    # 指定MongoDB数据库信息
+    mongocli = pymongo.MongoClient(host='localhost', port=27017)
+    # 创建数据库名
+    db = mongocli['demodb']
+    # 创建空间
+    sheet = db['fang']
+
+    while True:
+        # FIFO模式为 blpop，LIFO模式为 brpop，获取键值
+        source, data = rediscli.blpop(["demo:items"])
+        item = json.loads(data)
+        sheet.insert(item)
+
+        try:
+            print u"Processing: %(name)s <%(link)s>" % item
+        except KeyError:
+            print u"Error procesing: %r" % item
+
+if __name__ == '__main__':
+    main()
+```
+- MongoDB数据库：$`sudo mongod`
+- 执行 `python process_5i5j_mongodb.py` 文件
+
+7 ） 最终部署
+
+- 准备好1台主机，多台从机，将master项目部署到主机上，将slave项目部署到从机上
+- 将各个机器的ip地址、数据库地址替换成真实的地址
+- 启动从机项目，启动主机项目并启动`process_5i5j_mongodb.py`程序
+- 最终验证程序并对项目做相关调整
