update: python 72.md

--- a/python/contents/72.md
+++ b/python/contents/72.md
@@ -1,7 +1,5 @@
-分布式爬虫原理
+一、分布式爬虫原理
 ---
-
-### 概述
 
 - Scrapy框架虽然爬虫是异步多线程的，但是我们只能在一台主机上运行，爬取效率还是有限。
 - 分布式爬虫则是将多台主机组合起来，共同完成一个爬取任务，将大大提高爬取的效率。
@@ -18,7 +16,7 @@
 
 2.1 在多台主机上同时运行爬虫任务, 架构图如下：
 
-<img width="700" src="./screenshot/scrapy-eg6.jpeg" />
+<img width="700" src="https://github.com/johnnynode/web-blog/raw/master/python/contents/screenshot/scrapy-eg6.jpeg" />
 
 2.2 维护爬取队列
 
@@ -52,10 +50,12 @@
 - 重写一个Scheduer的实现, 使之可以从共享的爬取队列存取Request。
 - Scrapy-Redis 分布式爬虫的开源包, 直接使用就可以很方便实现分布式爬虫。
 
-Scrapy分布式爬虫
 ---
 
-### Scrapy-Redis 介绍
+二、Scrapy分布式爬虫
+---
+
+### 关于Scrapy-Redis
 
 - Scrapy-Redis则是一个基于Redis的Scrapy分布式组件。
 - 它利用Redis对用于爬取的请求(Requests)进行存储和调度(Schedule)，并对爬取产生的项目(items)存储以供后续处理使用。
@@ -63,7 +63,7 @@ Scrapy分布式爬虫
 - Scrapy-Redis的官方网址：https://github.com/rmax/scrapy-redis
 - 架构图
     <div>
-        <img width="700" src="./screenshot/scrapy-eg7.jpg" />
+        <img width="700" src="https://github.com/johnnynode/web-blog/raw/master/python/contents/screenshot/scrapy-eg7.jpg" />
     </div>
 
 ### 准备工作
@@ -218,7 +218,6 @@ SCHEDULER_PERSIST = True
 # 通过配置RedisPipeline将item写入key为 spider.name : items 的redis的list中，供后面的分布式处理item
 # 这个已经由 scrapy-redis 实现，不需要我们写代码
 ITEM_PIPELINES = {
-    'example.pipelines.ExamplePipeline': 300,
     'scrapy_redis.pipelines.RedisPipeline': 400
 }
 
@@ -243,7 +242,9 @@ DEFAULT_REQUEST_HEADERS = {
 }
 ```
 
-Scrapy分布式应用案例
+---
+
+三、Scrapy分布式应用案例
 ---
 
 ### 实现目标
@@ -254,16 +255,17 @@ Scrapy分布式应用案例
 
 ### 应用案例代码仓库和架构
 
-1 ）仓库
-[点此查看项目地址](https://github.com/johnnynode/python-spider/tree/master/contents/code/scrapy-radis)
+1 ）**仓库**
 
-注意：此项目没有做反爬处理，可以使用第三方ip代理，具体请看前面博文，没有从radis中存储到mongodb中，具体实现方式参考最后的代码
+- [点此查看项目地址](https://github.com/johnnynode/python-spider/tree/master/contents/code/scrapy-radis)
 
-2 ）架构
+- 注意：此项目没有做反爬处理，可以使用第三方ip代理，具体请看前面博文，没有从radis中存储到mongodb中，具体实现方式参考最后的代码
 
-<img width=700 src="./screenshot/scrapy-eg8.jpg">
+2 ）**架构**
 
-3 ) 编写master(主)项目代码
+<img width=700 src="https://github.com/johnnynode/web-blog/raw/master/python/contents/screenshot/scrapy-eg8.jpg">
+
+3 ) **编写master(主)项目代码**
 
 - 编辑爬虫文件：fang.py
 
@@ -370,7 +372,7 @@ REDIS_PORT = 6379
 
 - 测试：爬取url $`scrapy runspider fang.py`
 
-4 ) 编写slave(从)项目代码
+4 ) **编写slave(从)项目代码**
 
 - 编辑爬虫文件：fang.py
 
@@ -452,7 +454,7 @@ REDIS_PORT = 6379
 
 - 测试：爬取具体房屋信息 $`scrapy runspider fang.py`
 
-5 ) 测试radis
+5 ) **测试radis**
 
 - 在slave项目中另启一个终端，并连接redis数据库
 
@@ -463,7 +465,7 @@ $ redis_cli -p 6379
 
 - 查看终端输出及rdm中的数据信息
 
-6 ） 将爬取到的数据存入mongodb中 
+6 ） **将爬取到的数据存入mongodb中**
 
 - 网站的数据爬回来了，但是放在Redis里没有处理。之前我们配置文件里面没有定制自己的ITEM_PIPELINES，而是使用了RedisPipeline，所以现在这些数据都被保存在redis中，所以我们需要另外做处理。
 
@@ -501,9 +503,9 @@ if __name__ == '__main__':
 - MongoDB数据库：$`sudo mongod`
 - 执行 `python process_5i5j_mongodb.py` 文件
 
-7 ） 最终部署
+7 ） **最终部署**
 
 - 准备好1台主机，多台从机，将master项目部署到主机上，将slave项目部署到从机上
 - 将各个机器的ip地址、数据库地址替换成真实的地址
-- 启动从机项目，启动主机项目并启动`process_5i5j_mongodb.py`程序
+- 启动从机项目，启动主机项目并在主机上启动`process_5i5j_mongodb.py`程序
 - 最终验证程序并对项目做相关调整
