update: python 73.md

--- a/python/contents/73.md
+++ b/python/contents/73.md
@@ -90,11 +90,11 @@
 
 ### mitmproxy的安装和配置
 
-1 ） 安装
+1 ） **安装**
 
 - $`pip3 install mitmproxy`
 
-2 ) 配置
+2 ) **配置**
 
 - 配置手机和PC处于同一局域网下(参考Charles的相关说明)
 - 打开手机的网络配置，并设置使用代理配置，端口监听 `8080`
@@ -129,12 +129,12 @@
 
 ### mitmproxy的使用
 
-1 ) 运行
+1 ) **运行**
 - 运行 mitmproxy 命令就会打开一个监听窗口, 此窗口就会输出一个App请求中的信息 $`mitmproxy`
 - 注意：之前生成证书的`mitmdump`命令需要关闭，否则可能会冲突
 - 打开手机点击天猫，浏览商品，就可以看到各种GET/POST请求了
 
-2 ）各种操作指南
+2 ）**各种操作指南**
 
 <table>
     <tr><th>按键</th><th>说明</th></tr>
@@ -240,7 +240,7 @@ def response(flow):
 
 ```
 
-4 ）测试运行
+4 ）**测试运行**
 
 - $`mitmdump -s script.py`
 - 进入京东 搜索 笔记本电脑 关键词或其他关键词并进行浏览翻页操作
@@ -251,7 +251,7 @@ def response(flow):
 - 这个东西特别大，安卓、iOS需要下载各种模拟器镜像
 - 具体配置使用案例可在网络上查找，比较麻烦，下载的东西也较多，此处不做赘述
 
-6 ）其他替代方案？
+6 ）**其他替代方案？**
 
 - 可以分析京东接口的数据
 - 根据请求和响应的数据模拟请求
