update: python 74.md

--- a/python/contents/74.md
+++ b/python/contents/74.md
@@ -56,7 +56,7 @@
     import time
 
     #爬取指定城市的天气信息
-    url = "https://free-api.heweather.com/s6/weather?location=北京&key=a46fd5c4f1b54fda9ee71ba6711f09cd"
+    url = "https://free-api.heweather.com/s6/weather?location=北京&key=your-key"
     res = requests.get(url)
     time.sleep(2)
     #解析json数据
