update: python 73.md

--- a/python/contents/73.md
+++ b/python/contents/73.md
@@ -2,7 +2,7 @@
 
 - App的爬取相比Web端爬取更加容易，反爬中能力没有那么强，而且响应数据大多都是JSON形式，解析更加简单。
 - 在APP端若想查看和分析内容那就需要借助抓包软件，常用的有：Filddler、Charles、mitmproxy、Appium等。
-- mitmproxy是一个支持HTTP/HTTPS协议的抓包程序，类似Fiddler、Charles的功能，只不过世它通过控制台的形式操作。 
+- mitmproxy是一个支持HTTP/HTTPS协议的抓包程序，类似Fiddler、Charles的功能，只不过它通过控制台的形式操作。 
 - Appium是移动端的自动化测试工具，类似于前面所说的Selenium、利用它可以驱动Android、iOS等设备完成自动化测试。
 
 ### 关于Charles
