--- a/python/contents/75.md
+++ b/python/contents/75.md
@@ -216,52 +216,52 @@
         print('滑动轨迹', track)
     ```
 
-6 ) **按照轨迹拖动，完全验证**
+6 ) **按照轨迹拖动，完成验证**
 
-    ```python
-    def move_to_gap(self, slider, track):
-        '''
-        拖动滑块到缺口处
-        :param slider: 滑块
-        :param track: 轨迹
-        :return: 
-        '''
-        ActionChains(self.browser).click_and_hold(slider).perform()
-        for x in track:
-            ActionChains(self.browser).move_by_offset(xoffset=x, yoffset=0).perform()
-        time.sleep(0.5)
-        ActionChains(self.browser).release().perform()
+```python
+def move_to_gap(self, slider, track):
+    '''
+    拖动滑块到缺口处
+    :param slider: 滑块
+    :param track: 轨迹
+    :return: 
+    '''
+    ActionChains(self.browser).click_and_hold(slider).perform()
+    for x in track:
+        ActionChains(self.browser).move_by_offset(xoffset=x, yoffset=0).perform()
+    time.sleep(0.5)
+    ActionChains(self.browser).release().perform()
 
-    def crack(self):
-        #...
+def crack(self):
+    #...
 
-        # 拖动滑块
-        self.move_to_gap(slider, track)
+    # 拖动滑块
+    self.move_to_gap(slider, track)
 
-        success = self.wait.until(
-            EC.text_to_be_present_in_element((By.CLASS_NAME, 'geetest_success_radar_tip_content'), '验证成功'))
-        print(success)
-    ```
+    success = self.wait.until(
+        EC.text_to_be_present_in_element((By.CLASS_NAME, 'geetest_success_radar_tip_content'), '验证成功'))
+    print(success)
+```
 
 7 ) **完成登录**
 
-    ```python
-    def login(self):
-        ''' 执行登录 return: None '''
-        submit = self.wait.until(EC.element_to_be_clickable((By.CLASS_NAME, 'login-btn')))
-        submit.click()
-        time.sleep(10)
-        print('登录成功')
+```python
+def login(self):
+    ''' 执行登录 return: None '''
+    submit = self.wait.until(EC.element_to_be_clickable((By.CLASS_NAME, 'login-btn')))
+    submit.click()
+    time.sleep(10)
+    print('登录成功')
 
-    def crack(self):
-        #...
+def crack(self):
+    #...
 
-        # 失败后重试
-        if not success:
-            self.crack()
-        else:
-            self.login()
-    ```
+    # 失败后重试
+    if not success:
+        self.crack()
+    else:
+        self.login()
+```
 
 ### 完整代码
 
