update: linux 9.md

--- a/git-github-linux/contents/9.md
+++ b/git-github-linux/contents/9.md
@@ -126,4 +126,4 @@
 - 安装时推荐选择English,因为简体中文可能会出现一些问题，汉化不好，乱码等问题，需要特殊处理
 - 注意在安装软件的时候勾选上 `OpenSSH Server`, 其他都按默认安装即可
 - 记住自己设置的用户名和密码，即可登录使用
-- 从普通用户变为root用户 $`sudo su` 输入密码即可转变权限，，注意密码一般不可见
+- 从普通用户变为root用户 $`sudo su` 输入密码即可转变权限，注意密码一般不可见
