update: linux 9.md

--- a/git-github-linux/contents/9.md
+++ b/git-github-linux/contents/9.md
@@ -4,7 +4,7 @@
 - 常见的操作系统有：PC端的如MacOS、Windows、Unix、Linux, 手机端的如：Android、iOS系统等
 - Linux作为服务器最常用的系统，在使用上与windows有很大区别
 - Linux操作系统诞生于1991年，根据Unix开发而来，是免费的类Unix操作系统
-- Linxu操作系统有很多版本分支如：ubuntu、debian、redhat、centos、suse、fedora、gentoo linux、红旗linux、mandriva、turbolinux.
+- Linxu操作系统有很多版本分支如：ubuntu、debian、redhat、centos、suse、fedora、gentoo linux、红旗linux、mandriva、turbolinux
 - 免费、可靠、安全、稳定、多平台
 
 ### Linux在大型计算机上的应用
