update: linux 10.md

--- a/git-github-linux/contents/10.md
+++ b/git-github-linux/contents/10.md
@@ -52,31 +52,31 @@
     * `ln -s 源文件 新文件` 创建软链接(-s 即 --soft)
     * `ln 源文件 新文件` 创建硬链接
     * 例子：
-    ```shell
-    ''' 以下先测试软链接 '''
-    touch readme.text
-    echo '123' >> readme.txt # 将123写入readme.txt中 其中echo命令式输出 >> 是重定向的一次，没有>>和文件则是直接显示在控制台
-    cat readme.txt
-    123 # 这里是输出
-    ln -s readme.txt install.txt
-    ls -l
-    install.txt -> readme.txt # 这里是输出 如果编辑install.txt则会修改readme.txt中的内容，而install.txt的文件大小不会随之改变，只有被指向的真实文件的大小才会改变
-    readme.txt # 这里是输出
-    # 注意：将源文件删除，软链接则不可使用
-    # 软链接可以跨文件系统创建
-    
-    ''' 以下再测试硬链接 '''
-    touch setup.sh
-    echo '123' >> setup.sh
-    ln setup.sh setup2.sh
-    ls -ls
-    setup.sh # 这里是输出
-    setup2.sh # 这里是输出
-    echo 'abc' >> setup.sh
-    cat setup2.sh
-    123 # 这里是输出
-    abc # 这里是输出
-    # 同理修改setup2.sh 也是一样，两者同时变化，大小一样，没有区别，只是文件名有变化，改变一个内容，另一个同时发生变化
-    # 注意：删除任何一个源文件，另一个仍会存在
-    # 硬链接不可以跨文件系统创建
-    ```
+	    ```shell
+		''' 以下先测试软链接 '''
+		# 注意：将源文件删除，软链接则不可使用
+		# 软链接可以跨文件系统创建
+		touch readme.text
+		echo '123' >> readme.txt # 将123写入readme.txt中 其中echo命令式输出 >> 是重定向的一次，没有>>和文件则是直接显示在控制台
+		cat readme.txt
+		123 # 这里是输出
+		ln -s readme.txt install.txt
+		ls -l
+		install.txt -> readme.txt # 这里是输出 如果编辑install.txt则会修改readme.txt中的内容，而install.txt的文件大小不会随之改变，只有被指向的真实文件的大小才会改变
+		readme.txt # 这里是输出
+		
+		''' 以下再测试硬链接 '''
+		# 注意：删除任何一个源文件，另一个仍会存在
+		# 硬链接不可以跨文件系统创建
+		touch setup.sh
+		echo '123' >> setup.sh
+		ln setup.sh setup2.sh
+		ls -ls
+		setup.sh # 这里是输出
+		setup2.sh # 这里是输出
+		echo 'abc' >> setup.sh # 修改setup.sh
+		cat setup2.sh
+		123 # 这里是输出
+		abc # 这里是输出
+		# 同理修改setup2.sh 也是一样，两者同时变化，大小一样，只是文件名有变化，改变一个内容，另一个同时发生变化
+		```
